--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,11 @@
-<p>
-  header works!
-</p>
+<div>
+  <span>
+    <a href [routerLink]="'/'">Home</a>
+  </span>
+  <span>
+    <a href [routerLink]="'/user/list'">User list</a>
+  </span>
+  <span>
+    <a href [routerLink]="'/user/create'">Create a user</a>
+  </span>
+</div>
