--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<sky-header></sky-header>
 <router-outlet></router-outlet>
+<sky-footer></sky-footer>
