5.-Data binding(Property binding un item)

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,3 +1,16 @@
-<p>
-  user-list works!
-</p>
+<div>
+  <div class="detail-user"><B>Box1</B></div>
+  <div class="detail-user"><B>Box1</B></div>
+  <div class="detail-user"><B>Box1</B></div>
+  <div class="clean"></div>
+</div>
+
+<div>
+  <div class="detail-user">{{ usertest.name }}</div>
+  <div class="detail-user">{{ usertest.lastname }}</div>
+  <div class="detail-user">
+    <button>edit</button>
+    <button>view</button>
+  </div>
+  <div class="clean"></div>
+</div>
