--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,11 +1,21 @@
 <div>
-  <div class="detail-user"><B>Box1</B></div>
-  <div class="detail-user"><B>Box1</B></div>
-  <div class="detail-user"><B>Box1</B></div>
+  <div class="detail-user"><B>Name</B></div>
+  <div class="detail-user"><B>Lastname</B></div>
+  <div class="detail-user"><B>Options</B></div>
   <div class="clean"></div>
 </div>
 
-<div>
+<div *ngFor="let user of userlist">
+  <div class="detail-user">{{ user.name }}</div>
+  <div class="detail-user">{{ user.lastname }}</div>
+  <div class="detail-user">
+    <button>edit</button>
+    <button>view</button>
+  </div>
+  <div class="clean"></div>
+</div>
+
+<!-- <div>
   <div class="detail-user">{{ usertest.name }}</div>
   <div class="detail-user">{{ usertest.lastname }}</div>
   <div class="detail-user">
@@ -13,4 +23,4 @@
     <button>view</button>
   </div>
   <div class="clean"></div>
-</div>
+</div> -->
