5.-Data binding(Interpolacion un item)

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,3 +1,19 @@
-<p>
-  user-list works!
-</p>
+<h2>User List</h2>
+<div>
+  <div class="detail-user"><B>Name</B></div>
+  <div class="detail-user"><B>Last name</B></div>
+  <div class="detail-user">
+    <button>Edit</button>
+    <button>View</button>
+  </div>
+  <div class="clean"></div>
+</div>
+<div>
+  <div class="detail-user">{{ usertest.name }}</div>
+  <div class="detail-user">{{ usertest.lastname }}</div>
+  <div class="detail-user">
+    <button>Edit</button>
+    <button>View</button>
+  </div>
+  <div class="clean"></div>
+</div>
