6.-Data binding(Interpolacion n items)

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -8,9 +8,10 @@
   </div>
   <div class="clean"></div>
 </div>
-<div>
-  <div class="detail-user">{{ usertest.name }}</div>
-  <div class="detail-user">{{ usertest.lastname }}</div>
+
+<div *ngFor='let user of userList'>
+  <div class="detail-user">{{ user.name }}</div>
+  <div class="detail-user">{{ user.lastname }}</div>
   <div class="detail-user">
     <button>Edit</button>
     <button>View</button>
