--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -10,7 +10,7 @@
   <div class="detail-user">{{ user.lastname }}</div>
   <div class="detail-user">
     <button>edit</button>
-    <button>view</button>
+    <button (click)="viewUser(user._id)">view</button>
   </div>
   <div class="clean"></div>
 </div>
