--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -14,7 +14,7 @@
   <div class="detail-user">{{ user.lastname }}</div>
   <div class="detail-user">
     <button>Edit</button>
-    <button>View</button>
+    <button (click)="viewUser(user._id)">View</button>
   </div>
   <div class="clean"></div>
 </div>
