Implementing httpinteceptor, services

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -3,8 +3,7 @@
   <div class="detail-user"><B>Name</B></div>
   <div class="detail-user"><B>Last name</B></div>
   <div class="detail-user">
-    <button>Edit</button>
-    <button>View</button>
+    <b>Options</b>
   </div>
   <div class="clean"></div>
 </div>
