--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,4 +8,10 @@
   <span>
     <a href [routerLink]="'/user/create'">Create a User</a>
   </span>
+  <span>
+    <a href [routerLink]="'/user/information'">My personal information</a>
+  </span>
+  <span>
+    <a href [routerLink]="'/user/login'">Login</a>
+  </span>
 </div>
