--- a/src/app/user-information/user-information.component.html
+++ b/src/app/user-information/user-information.component.html
@@ -1,1 +1,8 @@
 <p><b>My Local nickname: </b>{{localNickname}}</p>
+<br>
+<p><b>Name: </b>{{myUser.name}}</p>
+<p><b>Lastname: </b>{{myUser.lastname}}</p>
+<p><b>Username: </b>{{myUser.username}}</p>
+<p><b>Email: </b>{{myUser.email}}</p>
+<p><b>Avatar: </b></p>
+<img [src]="myUser.avatar">
