--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,3 +1,12 @@
-<p>
-  user-login works!
-</p>
+<h2>Enter your credentials</h2>
+<div>
+  <label>UserName:</label>
+  <input type="text" [(ngModel)]="credentials.username" />
+</div>
+<div>
+  <label>Password:</label>
+  <input type="password" [(ngModel)]="credentials.password" />
+</div>
+<div class="button">
+  <button (click)="login()">Sig in</button>
+</div>
