--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,4 +11,7 @@
   <span>
     <a href [routerLink]="'/user/login'">Login</a>
   </span>
+  <span>
+    <a href [routerLink]="'/user/information'">My personal information</a>
+  </span>
 </div>
