--- a/src/app/user-form-login/user-form-login.component.html
+++ b/src/app/user-form-login/user-form-login.component.html
@@ -8,5 +8,5 @@
 </div>
 <br>
 <div class="button">
-  <button (click)="login()">Create a user</button>
+  <button (click)="login()">Sign In</button>
 </div>
