--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,4 +14,7 @@
   <span>
     <a href [routerLink]="'/user/information'">My personal information</a>
   </span>
+  <span>
+    <a href [routerLink]="'/article/list'">Article List</a>
+  </span>
 </div>
